eb_parser/src/snapshots/eb_core__parser__expr__test__parse1.snap
---
source: src/parser/expr.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    kind: Ident(
        "x",
    ),
    loc: Location(
        0,
    ),
}
