eb_parser/src/snapshots/eb_core__parser__expr__test__parse3.snap
---
source: src/parser/expr.rs
expression: "parse(&mut ctx).expect(\"fail to parse\")"

---
Node {
    kind: BinOp(
        Add,
        Node {
            kind: Int(
                123,
            ),
            loc: Location(
                0,
            ),
        },
        Node {
            kind: Ident(
                "x",
            ),
            loc: Location(
                6,
            ),
        },
    ),
    loc: Location(
        4,
    ),
}
